<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_title_label"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_add_user"
        android:title="@string/add_user_title_label"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/custom_add_user"/>

    <item
        android:id="@+id/action_add_product"
        android:title="@string/add_product_title_label"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/custom_add_product"/>

    <item
        android:id="@+id/action_back"
        android:title="@string/back_btn_title_label"
        android:icon="@drawable/ic_arrow_left"
        app:showAsAction="ifRoom" />

</menu>
