<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:titleTextColor="@color/black"
        app:title="Menu Management"
        app:titleTextColor="@color/black"
        app:titleCentered="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/bottom_shadow" />

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Single container inside NestedScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Add Product Form -->
            <LinearLayout
                android:id="@+id/addProductForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/rounded_background"
                android:elevation="2dp"
                android:layout_margin="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product_form_title_label"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/coffee_brown"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:backgroundTint="#888888"
                    android:textCursorDrawable="@null"
                    android:hint="@string/add_product_name_label" />

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:backgroundTint="#888888"
                    android:textCursorDrawable="@drawable/text_cursor_gray"
                    android:hint="@string/add_product_price_label"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product_supply_label"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/coffee_brown"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spinnerSupply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="#888888" />

                <EditText
                    android:id="@+id/etSupplyPerUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:backgroundTint="#888888"
                    android:textCursorDrawable="@drawable/text_cursor_gray"
                    android:inputType="numberDecimal"
                    android:hint="@string/add_product_supply_qty_label"
                    android:layout_marginTop="8dp" />

                <Button
                    android:id="@+id/btnAddSupplyToProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_supply_to_product"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/coffee_brown"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvSelectedSupplies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_supplies_selected"
                    android:textColor="@color/gray_700"
                    android:layout_marginTop="8dp" />

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="#888888" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product_cnl_bnt_label"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product_sub_btn_label"
                        android:textColor="#FFFFFF"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/coffee_brown" />
                </LinearLayout>
            </LinearLayout>

            <!-- Category: Coffee -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_coffee"
                    app:tint="@color/coffee_brown_600" />

                <TextView
                    android:id="@+id/tvCoffeeCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/category_coffee_label"
                    android:textColor="@color/coffee_brown"
                    android:textSize="24sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" />

            <!-- Category: Cold Drinks -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ice_ice_cream"
                    app:tint="@color/coffee_brown_600" />

                <TextView
                    android:id="@+id/tvColdCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/category_cold_drink_label"
                    android:textColor="@color/coffee_brown"
                    android:textSize="24sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_cold_drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" />

            <!-- Category: Pastries -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cookies_24"
                    app:tint="@color/coffee_brown_600" />

                <TextView
                    android:id="@+id/tvPastryCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/category_pastries_label"
                    android:textColor="@color/coffee_brown"
                    android:textSize="24sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_pastries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
